[gd_scene load_steps=8 format=3 uid="uid://bji41meabcqv8"]

[ext_resource type="Script" path="res://scripts/apple_bush.gd" id="1_3x7cd"]
[ext_resource type="Texture2D" uid="uid://clkg245kjpeg3" path="res://art/Basic_Grass_Biom_things.png" id="1_knj5h"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dbfmu"]
radius = 8.0

[sub_resource type="AtlasTexture" id="AtlasTexture_e0y0n"]
atlas = ExtResource("1_knj5h")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4fhag"]
atlas = ExtResource("1_knj5h")
region = Rect2(16, 48, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ss61f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0y0n")
}],
"loop": true,
"name": &"bush_apple",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4fhag")
}],
"loop": true,
"name": &"no_bush_apple",
"speed": 0.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_plt04"]
radius = 27.0

[node name="apple_bush" type="CharacterBody2D"]
script = ExtResource("1_3x7cd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_dbfmu")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ss61f")
animation = &"bush_apple"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_plt04")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
